src/objects/Opportunity/fields/Contributor_BG_1__c.field-meta.xml
<CustomField>
    <fullName>Contributor_BG_1__c</fullName>
    <label>Contributor BG 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BGs__gvs</valueSetName>
    </valueSet>
</CustomField>