src/objects/Opportunity/fields/G3_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>G3_Approval_Level__c</fullName>
    <label>G3 Approval Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LoA_G4_Approval_Levels__gvs</valueSetName>
    </valueSet>
</CustomField>