src/objects/Opportunity/fields/Lead_BU__c.field-meta.xml
<CustomField>
    <fullName>Lead_BU__c</fullName>
    <description>Selection of group within MN to lead on approvals. Mandatory selection from drop-down list if MN or ION are chosen as the Lead BG</description>
    <label>Lead BU</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_BG__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Business_Units__gvs</valueSetName>
    </valueSet>
</CustomField>