src/objects/Opportunity/fields/Linkage__c.field-meta.xml
<CustomField>
    <fullName>Linkage__c</fullName>
    <label>Linkage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>