src/objects/Opportunity/fields/Multiple_or_Unknown_EC_Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Multiple_or_Unknown_EC_Market_Segment__c</fullName>
    <label>Multiple or Unknown EC Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>End_Customer_Information__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Market_Segment__gvs</valueSetName>
    </valueSet>
</CustomField>