src/objects/Opportunity/fields/Supporting_BG__c.field-meta.xml
<CustomField>
    <fullName>Supporting_BG__c</fullName>
    <label>Obsolete field Supporting BGs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Lead_BG__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Business_Group_Values__gvs</valueSetName>
    </valueSet>
</CustomField>