src/objects/Opportunity/fields/Supporting_BGs_BUs__c.field-meta.xml
<CustomField>
    <fullName>Supporting_BGs_BUs__c</fullName>
    <description>Contains all business units codes along with the business groups code</description>
    <label>Supporting BGs/BUs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Lead_BG__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Business_Units__gvs</valueSetName>
    </valueSet>
</CustomField>