src/objects/Opportunity/fields/Winning_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Winning_Competitor__c</fullName>
    <inlineHelpText>This field can only be populated during opportunity closure or on the competitor section via the related tab.</inlineHelpText>
    <label>Winning Competitor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetName>All_Competitors__gvs</valueSetName>
    </valueSet>
</CustomField>