src/objects/Opportunity/validationRules/loss_reason_compulsory.validationRule-meta.xml
<ValidationRule>
    <fullName>loss_reason_compulsory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(
TEXT(StageName) = &quot;Closed Lost&quot;, TEXT( Competitor__c ) = &quot;Other&quot;),

ISBLANK( TEXT( Lost_Reason__c  )
))</errorConditionFormula>
    <errorMessage>Loss reason is mandatory when stage is &apos;Closed Lost&apos;</errorMessage>
</ValidationRule>